Version 2.0.0
  Incompatible changes:
  - Remove the deprecated option "plan_costs", since it is not very useful and
    is a maintenance burden.  After an upgrade, tables with this option set
    should be updated with:
    ALTER FOREIGN TABLE ... OPTIONS (DROP plan_costs);

  Bugfixes:
  - oracle_fdw crashed on Windows if queries use a NULL parameter or
    an empty subselect.
    Reprot by PAscal Lemoy.
  - Reading "srid.map" sometimes caused errors even if everything was alright.
    Report by Paul Dziemiela, analysis by Christian Ullrich.

Version 1.5.0, released 2016-08-05
  Enhancements:
  - Add table option "sample_percent" to ANALYZE very large tables
    This can speed up ANALYZE significantly.
    Idea by PAscal Lemoy.
  - Introduce a table option "prefetch" for the Oracle row prefetch count
    This can speed up foreign table scans.
    Per discussion with by PAscal Lemoy and Maurizio De Giorgi.
  - Push down arbitrary IN and NOT IN expressions
    Up to now, only lists with constants were considered.
    Per request from Volkmar Bühringer.
  - Push down ORDER BY expressions to Oracle from PostgreSQL 9.2 on
    Only expressions of numeric, date and timestamp datatypes are pushed
    down, since the string collations in PostgreSQL and Oracle cannot be
    guaranteed to be the same.
    Courtesy of NTT OSS Center, patch by Tatsuro Yamada.

  Bugfixes:
  - Fix errors with now() and date/timestamp parameters in queries
    This bug was introduced in 1.3.0 and caused errors like
    ERROR:  error executing query: OCIDateTimeFromText failed to convert parameter
    DETAIL:  ORA-01843: not a valid month
    when now() or "current_timestamp" and friends or date/timestamp
    parameters were used.
    Report by Li Hailong.
  - Fix errors when updating date/timestamp columns
    This bug was also introduced in 1.3.0 and caused errors like
    ORA-01856: BC/B.C. or AD/A.D. required
    if the Oracle and PostgreSQL types were different.